--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,9 +3,9 @@
   position: absolute;
   width: 100%;
   z-index: 2;
-  
+
   @mixin atMedium {
-    background-color: rgba(47, 85, 114, .3);
+    background-color: rgba(47, 85, 114, 0.3);
   }
 
   &__btn-container {
@@ -30,7 +30,7 @@
   &__menu-icon {
     width: 20px;
     height: 20px;
-    background-color: #FFF;
+    background-color: #fff;
     position: absolute;
     top: 10px;
     right: 10px;
@@ -44,6 +44,10 @@
     display: none;
 
     @mixin atMedium {
+      display: block;
+    }
+
+    &--is-visible {
       display: block;
     }
   }
